# tc-rust

./: Cargo.toml  README.md
buffers/: Cargo.toml  poem.txt
buffers/src/: main.rs
cpp-rust/: Cargo.toml  build.rs
cpp-rust/include/: rango.h
cpp-rust/src/: main.rs  rango.cpp
ferris/: Cargo.toml
ferris/src/: main.rs
fibonacci/: Cargo.toml
fibonacci/src/: fib1.rs  fib2.py  fib2.rs  main.rs
grrs/: Cargo.toml
grrs/src/: lib.rs  main.rs
grrs/tests/: cli.rs
src/: fib1.py  main.rs
strings/: Cargo.toml  README.md
strings/src/: main.rs
supervisor/: Cargo.toml  go.sh
supervisor/src/: lib.rs  main.rs
