[package]
name = "grrs"
version = "0.1.0"
authors = ["Jose Tiago Macara Coutinho <coutinhotiago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "*"
anyhow = "1"
log = "*"
env_logger = "*"

[dev-dependencies]
assert_cmd = "1"
predicates = "1"
tempfile = "3"
