[package]
name = "supervisor"
version = "0.1.0"
authors = ["Jose Tiago Macara Coutinho <coutinhotiago@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process = "^1.1"
async-std = { version = "^1.10", features = ["attributes"] }